--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "loveorigami/yii2-icofont",
-    "description": "Yii2 icofont",
+    "description": "Asset Bundle for Yii2 with IcoFont http://icofont.com",
     "type": "yii2-extension",
     "keywords": ["yii2","icofont"],
-	"version": "1.0",
+	"version": "1.1",
     "license": "MIT",
     "authors": [
 		{
