--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "loveorigami/yii2-icofont",
     "description": "Asset Bundle for Yii2 with IcoFont http://icofont.com",
     "type": "yii2-extension",
-    "keywords": ["yii2","icofont"],
-	"version": "1.2",
+    "keywords": ["yii2","icofont", "icons", "font"],
+	"version": "1.3",
     "license": "MIT",
     "authors": [
 		{
